Add authentication and authorization for user and experiment
